fix(color): slightly lighter theme color in dark mode

--- a/src/vars/color.css
+++ b/src/vars/color.css
@@ -88,7 +88,7 @@
     --e-ground-lightness: 9%;
     --e-negative-hue: 310;
     --e-theme-hue: 190;
-    --e-theme-lightness: 40%;
+    --e-theme-lightness: 41%;
 
     --e-color-highlight-default: var(--e-color-highlight-1);
 
